<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:background="@color/Forest_green"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin">

    <LinearLayout
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/key_words2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/key_words"
        android:layout_gravity="center"
        android:paddingTop="25dp"
        android:background="@color/Deep_MedBlue"/>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/PaleSpring_green"
        />
    <TextView
    android:id="@+id/key_words1"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/Key_words"
        android:paddingTop="25dp"
        android:background="@color/Deep_MedBlue"/>
</LinearLayout>

        <View
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/PaleSpring_green"
            />
        <ImageView
            android:layout_width="270dp"
            android:layout_height="180dp"
            android:src="@drawable/keep_up"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:paddingTop="20dp"

            />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            >
            <ImageView


                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ic_launcher_yoga"
                android:layout_weight="1"

                />

        <TextView
        android:id="@+id/business"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Business_type"
            android:textSize="@dimen/font_size_contact"
        android:layout_weight="4"
        android:background="@color/Forest_green"

            />

        </LinearLayout>


        <View
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/PaleSpring_green"/>

        <Button
        android:id="@+id/motivator"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/Motivator"
            android:layout_weight="3"
        android:background="@color/Deep_MedBlue"
        android:textSize="@dimen/font_size_heading"
            />
        <View
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/PaleSpring_green"/>

        <TextView

            android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawableLeft="@drawable/ic_launcher_co"
            android:paddingLeft="@dimen/paddingLeft"
            android:gravity="center_vertical"
            android:text="@string/Business_name"
            android:textSize="@dimen/font_size_logoinfo"
            android:layout_weight="2"
        android:background="@color/Forest_green" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawableLeft="@drawable/telephone"
        android:text="@string/ContactTel"
        android:gravity="center_vertical"
        android:textSize="@dimen/font_size_logoinfo"
        android:layout_weight="2"
        android:paddingLeft="@dimen/paddingLeft"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawableLeft="@drawable/email"
        android:layout_weight="2"
        android:paddingLeft="@dimen/paddingLeft"
        android:text="@string/email"
        android:textSize="@dimen/font_size_logoinfo"
        android:gravity="center_vertical"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/Motivatorcont"
        android:textSize="@dimen/font_size_detail"
        android:layout_weight="1"
        android:gravity="center_horizontal"/>


</LinearLayout>